--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="py-10 bg-bordure w-full px-6 md:px-20">
         <nav class="flex items-center justify-between">
             <div>
-                <img src="/image/logo.svg" alt="Logo">
+                <img src="./image/logo.svg" alt="Logo">
             </div>
             
             <div class="md:hidden">
