Message de commit ici

--- a/index.html
+++ b/index.html
@@ -267,23 +267,23 @@
                 <div class="mx-6 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6 py-12">
                     <div class="bg-white rounded-lg p-6 cursor-pointer hover:scale-95 transition duration-700 hover:shadow-lg flex flex-col w-full sm:w-[302px] h-auto">
                         <div class="mx-auto">
-                            <img src="/image/Rectangle 1461.svg" class="mx-auto" alt="Calculated Weather">
+                            <img src="./image/Rectangle 1461.svg" class="mx-auto" alt="Calculated Weather">
                         </div>
                         <h2 class="text-black text-xl font-semibold mt-4 text-sm sm:text-lg">Introduction to Design System in Figma</h2>
                         <div class="flex justify-between items-center mt-4 w-full">
                             <div class="flex items-center space-x-2">
-                                <img src="/image/puce.svg" alt="">
+                                <img src="./image/puce.svg" alt="">
                                 <p class="text-sm sm:text-lg font-light  ">16 Lessons</p>
                             </div>
                             <div class="flex items-center space-x-2">
-                                <img src="/image/Clock.svg" alt="">
+                                <img src="./image/Clock.svg" alt="">
                                 <p class="text-sm sm:text-lg font-light">16 Weeks</p>
                             </div>
                         </div>                    
                         <div class="flex flex-row justify-between items-center mt-4 ">
                             <p class="text-xl font-semibold text-gray-900">$350</p>
                             <div class="flex items-center space-x-2">
-                                <img src="/image/Star 1.svg" alt="">
+                                <img src="./image/Star 1.svg" alt="">
                                 <p class="text-lg font-light">4.9</p>
                             </div>
                         </div>
@@ -584,11 +584,11 @@
                         <div class="flex flex-col items-center lg:items-start">
                             <h4 class="text-xl font-bold mb-4">Social media</h4>
                             <div class="flex space-x-4">
-                                <a href="#"><img src="./image/Facebook.svg" alt="Facebook" class="h-8 w-8"></a>
-                                <a href="#"><img src="./image/Twitter.svg" alt="Twitter" class="h-8 w-8"></a>
-                                <a href="#"><img src="./image/Instagram.svg" alt="Instagram" class="h-8 w-8"></a>
-                                <a href="#"><img src="./image/Linkedin.svg" alt="LinkedIn" class="h-8 w-8"></a>
-                                <a href="#"><img src="./image/Youtube.svg" alt="YouTube" class="h-8 w-8"></a>
+                                <a href="#"><img src="./image/Facebook.svg" alt="Facebook" class="h-10 w-10"></a>
+                                <a href="#"><img src="./image/Twitter.svg" alt="Twitter" class="h-10 w-10"></a>
+                                <a href="#"><img src="./image/Instagram.svg" alt="Instagram" class="h-10 w-10"></a>
+                                <a href="#"><img src="./image/Linkedin.svg" alt="LinkedIn" class="h-10 w-10"></a>
+                                <a href="#"><img src="./image/Youtube.svg" alt="YouTube" class="h-10 w-10"></a>
                             </div>
                         </div>
                     </div>
