Message de commit ici

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <button aria-label="Panier" class="p-2">
                         <img src="./image/ShoppingBag.svg" alt="Panier">
                     </button>
-                    <img src="/image/search.svg" alt="Recherche" class="w-6 h-6 ml-2">
+                    <img src="./image/search.svg" alt="Recherche" class="w-6 h-6 ml-2">
                     <span class="ml-2 text-gray-500">Search</span>
                 </div>
             </div>
